--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-opus": "^0.2.6",
     "node-trello": "^1.2.1",
     "request": "^2.81.0",
+    "request-promise-native": "^1.0.5",
     "urban": "^0.3.1",
     "youtube-node": "^1.3.0",
     "youtube-search": "^1.0.10",
