--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
   },
   "homepage": "https://github.com/Vaeb/VaeBot#readme",
   "dependencies": {
-    "bufferutil": "^3.0.0",
-    "dateformat": "^2.0.0",
+    "bufferutil": "^4.0.0",
+    "dateformat": "^3.0.3",
     "discord.js": "git://github.com/hydrabolt/discord.js.git#master",
     "erlpack": "github:hammerandchisel/erlpack",
     "google-translate-api": "^2.3.0",
-    "libsodium-wrappers": "^0.5.1",
-    "mysql": "^2.14.1",
-    "node-opus": "^0.2.6",
+    "libsodium-wrappers": "^0.7.3",
+    "node-opus": "^0.3.0",
     "node-trello": "^1.2.1",
     "request": "^2.81.0",
     "request-promise-native": "^1.0.5",
     "urban": "^0.3.1",
+    "uws": "^99.0.0",
     "youtube-node": "^1.3.0",
     "youtube-search": "^1.0.10",
     "ytdl-core": "^0.15.2"
