--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Discord bot for everything from moderation to music.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "prod": "forever -c \"nodemon --exitcrash\" index.js"
   },
   "repository": {
     "type": "git",
