--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "dateformat": "^3.0.3",
     "discord.js": "^11.4.2",
     "erlpack": "github:hammerandchisel/erlpack",
-    "google-translate-api": "^2.3.0",
+    "google-translate": "^2.3.0",
     "libsodium-wrappers": "^0.7.3",
     "mysql": "^2.16.0",
     "node-opus": "^0.3.0",
