--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/Vaeb/VaeBot#readme",
   "dependencies": {
+    "@google-cloud/translate": "^4.1.3",
     "bufferutil": "^4.0.0",
     "dateformat": "^3.0.3",
     "discord.js": "^11.4.2",
