--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "discord.js": "^11.4.2",
     "erlpack": "github:hammerandchisel/erlpack",
     "google-translate": "^2.3.0",
+    "hepburn": "^1.1.1",
     "libsodium-wrappers": "^0.7.3",
     "mysql": "^2.16.0",
     "node-opus": "^0.3.0",
