--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node-trello": "^1.2.1",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
+    "soundcloud-downloader": "^0.1.2",
     "urban": "^0.3.1",
     "uws": "^99.0.0",
     "youtube-node": "^1.3.0",
